--- a/master-template-woo-child/assets/sass/custom-style.sass
+++ b/master-template-woo-child/assets/sass/custom-style.sass
@@ -1,6 +1,9 @@
 @import variables
 @import general-styles
-    
+@import rgc-subheader
+@import rgc-package
+@import custom-slick-carousel
+
 .form-master
     background-color: transparent !important
     color: white !important
