--- a/master-template-woo-child/assets/sass/_general-styles.sass
+++ b/master-template-woo-child/assets/sass/_general-styles.sass
@@ -34,3 +34,7 @@
         transition: all .3s
         &:hover
             background: $dark
+.bg-image
+    background-size: cover
+    background-position: center
+    background-repeat: no-repeat
