--- a/master-template-woo-child/assets/sass/custom-style.sass
+++ b/master-template-woo-child/assets/sass/custom-style.sass
@@ -3,6 +3,8 @@
 @import rgc-subheader
 @import rgc-package
 @import custom-slick-carousel
+@import rgc-search-advanced
+@import single-tours
 
 .form-master
     background-color: transparent !important
