--- a/master-template-woo-child/assets/css/custom-style.css
+++ b/master-template-woo-child/assets/css/custom-style.css
@@ -346,6 +346,17 @@ textarea.form-control {
   border-right: 2px solid #010077;
 }
 
+.rgc-user-block {
+  min-height: 80vh;
+}
+.rgc-user-block i {
+  font-size: 4em;
+  color: #010077;
+}
+.rgc-user-block p {
+  font-size: 1.5em;
+}
+
 .form-master {
   background-color: transparent !important;
   color: white !important;
