--- a/master-template-woo-child/assets/sass/custom-style.sass
+++ b/master-template-woo-child/assets/sass/custom-style.sass
@@ -5,6 +5,7 @@
 @import custom-slick-carousel
 @import rgc-search-advanced
 @import single-tours
+@import rgc-user-block
 
 .form-master
     background-color: transparent !important
