--- a/master-template-woo-child/assets/sass/_rgc-package.sass
+++ b/master-template-woo-child/assets/sass/_rgc-package.sass
@@ -42,9 +42,11 @@
             margin-right: 2em
             color: #BD0606
             font-weight: bold
-            font-size: 1.5em
+            br
+                display: none
             &__condition
                 color: #BD0606
+                font-size: .7em
         &-normal
             text-decoration-line: line-through
             color: #757575
@@ -77,6 +79,14 @@
             height: 600px
             object-fit: cover
             border-radius: 20px
+    &__text-afiliados
+        color: #CD4343
+        font-size: 1.2em
+        font-weight: bold
+    &__text-noafiliados
+        color: #757575
+        font-family: 1em
+        font-weight: bold
 .rgc-box-offer
     width: 100px
     height: 100px
