--- a/master-template-woo-child/assets/css/custom-style.css
+++ b/master-template-woo-child/assets/css/custom-style.css
@@ -171,10 +171,13 @@ textarea.form-control {
   margin-right: 2em;
   color: #BD0606;
   font-weight: bold;
-  font-size: 1.5em;
+}
+.rgc-content-package__price-reduced br {
+  display: none;
 }
 .rgc-content-package__price-reduced__condition {
   color: #BD0606;
+  font-size: 0.7em;
 }
 .rgc-content-package__price-normal {
   text-decoration-line: line-through;
@@ -213,6 +216,16 @@ textarea.form-control {
   height: 600px;
   object-fit: cover;
   border-radius: 20px;
+}
+.rgc-content-package__text-afiliados {
+  color: #CD4343;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+.rgc-content-package__text-noafiliados {
+  color: #757575;
+  font-family: 1em;
+  font-weight: bold;
 }
 
 .rgc-box-offer {
@@ -344,6 +357,11 @@ textarea.form-control {
 .rgc-assesor div:nth-child(even) {
   border-left: 2px solid #010077;
   border-right: 2px solid #010077;
+}
+
+.top-footer .footer-pbx p {
+  font-family: "Nunito", sans-serif !important;
+  font-size: 2em;
 }
 
 .form-master {
