--- a/master-template-woo-child/assets/sass/_general-styles.sass
+++ b/master-template-woo-child/assets/sass/_general-styles.sass
@@ -69,3 +69,10 @@ textarea.form-control
     .menu-item
         padding: .5em 1em
         border-bottom: 1px solid #757575
+
+.privacy-policy
+    .rgc-search-box
+        display: none
+.elementor-page-53
+    .rgc-search-box
+        display: none
