--- a/master-template-woo-child/assets/sass/custom-style.sass
+++ b/master-template-woo-child/assets/sass/custom-style.sass
@@ -6,6 +6,7 @@
 @import rgc-search-advanced
 @import single-tours
 @import custom-footer
+@import rgc-footer
 
 .form-master
     background-color: transparent !important
