--- a/master-template-woo-child/assets/sass/_custom-footer.sass
+++ b/master-template-woo-child/assets/sass/_custom-footer.sass
@@ -1,5 +1,14 @@
 .top-footer
-   .footer-pbx
-       p
+    .footer-pbx
+        p
             font-family: $secondary-font !important
             font-size: 2em
+    .footer-legal
+        p
+            font-size: 1em
+            margin-top: 2em
+        a
+            color: white
+            transition: all .4s
+            &:hover
+                color: #E0831F
