--- a/master-template-woo-child/assets/sass/custom-style.sass
+++ b/master-template-woo-child/assets/sass/custom-style.sass
@@ -7,6 +7,7 @@
 @import single-tours
 @import custom-footer
 @import rgc-footer
+@import wompi
 
 .form-master
     background-color: transparent !important
