--- a/master-template-woo-child/assets/sass/_wompi.sass
+++ b/master-template-woo-child/assets/sass/_wompi.sass
@@ -4,8 +4,12 @@
     min-height: 520px
 
 .elementor-page-55
-    .rgc-search-box
-        display: none
-    .sub-heading-section
-      .breadcrumbs
-          display: none
+  .rgc-search-box
+    display: none
+  .sub-heading-section
+    padding: 4em !important
+    .breadcrumbs
+      display: none
+    .container
+      h1
+        font-size: 90px
