--- a/master-template-woo-child/assets/css/custom-style.css
+++ b/master-template-woo-child/assets/css/custom-style.css
@@ -99,6 +99,11 @@ textarea.form-control {
   display: none;
 }
 
+.form-master {
+  background-color: transparent !important;
+  color: white !important;
+}
+
 .rgc-sub-heading-section {
   color: white;
 }
@@ -431,9 +436,94 @@ textarea.form-control {
   font-size: 1.5em;
 }
 
-.form-master {
-  background-color: transparent !important;
-  color: white !important;
+.rgc-search-bar {
+  border-radius: 20px;
+  margin-top: 2em;
+  margin: 2em;
+  padding: 2em 3em;
+  background-color: white;
+  margin-bottom: -100px;
+  display: inline-block !important;
+  transform: translateY(50px);
+}
+
+.rgc-custom-filter-form ul {
+  margin-bottom: 0px;
+  padding-left: 0px;
+}
+.rgc-custom-filter-form ul li {
+  text-align: left !important;
+}
+.rgc-custom-filter-form input, .rgc-custom-filter-form select {
+  border: 1px solid #BCBCBC !important;
+  height: 50px;
+  padding: 0 1em;
+  font-family: "Nunito", sans-serif;
+  border-radius: 5px;
+  color: #555555;
+}
+.rgc-custom-filter-form input::placeholder, .rgc-custom-filter-form select::placeholder {
+  color: rgba(11, 70, 108, 0.5) !important;
+  font-family: "Nunito", sans-serif !important;
+}
+.rgc-custom-filter-form h4 {
+  text-align: left !important;
+  margin: 0;
+  margin-bottom: 5px;
+}
+.rgc-custom-filter-form .btn-filter-submit {
+  background-color: #010077;
+  color: white;
+  border: 1px solid #010077 !important;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 2px;
+  display: inline-block;
+  height: 50px;
+  border-radius: 5px;
+  padding: 0 1em;
+}
+.rgc-custom-filter-form .btn-filter-submit:hover {
+  background-color: #010049;
+}
+
+.rgc-card-archive {
+  overflow: hidden;
+}
+.rgc-card-archive figure {
+  margin: 0;
+  position: relative;
+}
+.rgc-card-archive__img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+.rgc-card-archive__caption {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  background-color: white;
+  color: #E0831F;
+  padding: 0.5em 1em;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.rgc-card-archive__caption__city {
+  color: #E0831F;
+  font-weight: 600;
+}
+.rgc-card-archive hr {
+  border: 1px solid #DFDFDF;
+  margin: 1em auto;
+}
+.rgc-card-archive__title:hover {
+  color: #01004e;
+  text-decoration: underline;
+}
+
+.rgc-search-not-found {
+  max-width: 200px !important;
+  margin-bottom: 2em;
 }
 
 /*# sourceMappingURL=custom-style.css.map */
