--- a/master-template-woo-child/assets/sass/_general-styles.sass
+++ b/master-template-woo-child/assets/sass/_general-styles.sass
@@ -76,3 +76,7 @@ textarea.form-control
 .elementor-page-53
     .rgc-search-box
         display: none
+
+.form-master
+    background-color: transparent !important
+    color: white !important
