--- a/master-template-woo-child/assets/sass/custom-style.sass
+++ b/master-template-woo-child/assets/sass/custom-style.sass
@@ -9,7 +9,5 @@
 @import rgc-footer
 @import wompi
 @import rgc-user-block
-
-.form-master
-    background-color: transparent !important
-    color: white !important
+@import rgc-search-bar
+@import rgc-page-search
