Menú rol usuarios

--- a/master-template-woo-child/assets/css/custom-style.css
+++ b/master-template-woo-child/assets/css/custom-style.css
@@ -104,6 +104,10 @@ textarea.form-control {
   color: white !important;
 }
 
+.page-id-55 .rgc-search-bar {
+  display: none !important;
+}
+
 .rgc-sub-heading-section {
   color: white;
 }
