--- a/master-template-woo-child/assets/sass/_general-styles.sass
+++ b/master-template-woo-child/assets/sass/_general-styles.sass
@@ -80,3 +80,7 @@ textarea.form-control
 .form-master
     background-color: transparent !important
     color: white !important
+
+.page-id-55
+    .rgc-search-bar
+        display: none !important
