--- a/master-template-woo-child/assets/sass/custom-style.sass
+++ b/master-template-woo-child/assets/sass/custom-style.sass
@@ -9,6 +9,7 @@
 @import rgc-footer
 @import wompi
 @import rgc-user-block
+@import custom-login
 
 .form-master
     background-color: transparent !important
