--- a/master-template-woo-child/assets/sass/_rgc-package.sass
+++ b/master-template-woo-child/assets/sass/_rgc-package.sass
@@ -16,6 +16,9 @@
         font-size: 1.2em !important
     .rgc-buttons
         margin-bottom: -60px
+        .wpcf7-form
+            p
+                margin: 0
 .rgc-content-package
     border-radius: 20px
     background-color: #F5F5F5
@@ -47,13 +50,15 @@
             &__condition
                 color: #BD0606
                 font-size: .7em
+                display: block
         &-normal
             text-decoration-line: line-through
             color: #757575
             &__condition
                 color: #757575
     &__rating
-        display: flex
+        // display: flex
+        display: none
         flex-flow: row nowrap
         align-items: center
         &-number
