--- a/master-template-woo-child/assets/sass/_single-tours.sass
+++ b/master-template-woo-child/assets/sass/_single-tours.sass
@@ -24,7 +24,7 @@
             font-size: 4em
             margin-bottom: 10px
         a
-            font-size: 1.5em
+            font-size: 1em !important
             color: $primary-color
             transition: all .3s
             display: inline-block
