--- a/master-template-woo-child/assets/css/custom-style.css
+++ b/master-template-woo-child/assets/css/custom-style.css
@@ -1,3 +1,7 @@
+body, html {
+  overflow-x: hidden;
+}
+
 .bg-gradient-primary {
   background: #fbbb01;
   background: linear-gradient(270deg, #fbbb01 0%, #e0831f 100%);
@@ -553,6 +557,45 @@ textarea.form-control {
 
 .sticky-header .btn-logout, .sticky-header .item-profile-user {
   display: none;
+}
+
+.page-template-dashboard-page .top-footer {
+  display: none;
+}
+
+.rgc-dashboard-main {
+  height: 93vh;
+}
+
+.rgc-dashboard-sidebar {
+  height: 93vh;
+  background: #00002b;
+}
+.rgc-dashboard-sidebar .nav-item {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+.rgc-dashboard-sidebar .nav-link {
+  padding: 1.5em 2em;
+  color: white;
+  font-size: 1.2em;
+  opacity: 0.7;
+}
+.rgc-dashboard-sidebar .nav-link:hover {
+  opacity: 1;
+}
+
+.rgc-dashboard-content {
+  height: 93vh;
+}
+.rgc-dashboard-content hr {
+  width: 50px;
+  border: 1px solid #d7d7d7;
+}
+
+@media screen and (max-width: 480px) {
+  .rgc-dashboard-main, .rgc-dashboard-sidebar, .rgc-dashboard-content {
+    height: auto;
+  }
 }
 
 /*# sourceMappingURL=custom-style.css.map */
