--- a/master-template-woo-child/assets/css/login.css
+++ b/master-template-woo-child/assets/css/login.css
@@ -1,3 +1,7 @@
+body, html {
+  overflow-x: hidden;
+}
+
 .bg-gradient-primary {
   background: #fbbb01;
   background: linear-gradient(270deg, #fbbb01 0%, #e0831f 100%);
