--- a/master-template-woo-child/assets/sass/_general-styles.sass
+++ b/master-template-woo-child/assets/sass/_general-styles.sass
@@ -1,3 +1,5 @@
+body, html
+    overflow-x: hidden
 .bg-gradient-primary
     background: rgb(251,187,1)
     background: linear-gradient(270deg, rgba(251,187,1,1) 0%, rgba(224,131,31,1) 100%)
