--- a/master-template-woo-child/assets/sass/_custom-footer.sass
+++ b/master-template-woo-child/assets/sass/_custom-footer.sass
@@ -12,3 +12,7 @@
             transition: all .4s
             &:hover
                 color: #E0831F
+
+@media (max-width: 480px)
+    .info-bottom-footer
+        margin-top: 4
