--- a/master-template-woo-child/assets/sass/_rgc-package.sass
+++ b/master-template-woo-child/assets/sass/_rgc-package.sass
@@ -115,3 +115,11 @@
         border: 2px dashed white
         border-radius: 50%
         transform: scale(.9)
+
+@media (max-width: 480px)
+    .rgc-card-package
+        .button-master
+            font-size: 1em !important
+        &__info
+            .rgc-content-package__desc
+                display: none
