--- a/master-template-woo-child/assets/sass/_rgc-search-bar.sass
+++ b/master-template-woo-child/assets/sass/_rgc-search-bar.sass
@@ -43,3 +43,10 @@
 .page-template-paquetes-page, .single-tours, .search, .blog.logged-in
     .rgc-search-bar
         display: inline-block !important
+
+@media (max-width: 480px)
+    .rgc-search-bar
+        box-sizing: border-box
+        padding: 2em 1em
+        margin: 0
+        margin-bottom: -10px
