--- a/master-template-woo-child/assets/sass/_rgc-subheader.sass
+++ b/master-template-woo-child/assets/sass/_rgc-subheader.sass
@@ -15,3 +15,17 @@
         &__right
             h3
                 font-family: $secondary-font !important
+    &.opacity-layer:before
+        background-color: rgba($aux-color, .8) !important
+
+@media (max-width: 480px)
+    .rgc-sub-heading-section
+        padding: 1em !important
+        .rgc-intro__left
+            h2
+                font-size: 1em !important
+        .rgc-intro__right
+            h3
+                font-size: 1.5em !important
+                margin-top: 2em
+    
