--- a/master-template-woo-child/assets/sass/_wompi.sass
+++ b/master-template-woo-child/assets/sass/_wompi.sass
@@ -13,3 +13,10 @@
     .container
       h1
         font-size: 90px
+
+@media (max-width: 480px)
+  .elementor-page-55
+    .sub-heading-section
+      padding: 2em !important
+      h1
+        font-size: 2.5em !important
