--- a/master-template-woo/assets/src/style/_bottom-header.sass
+++ b/master-template-woo/assets/src/style/_bottom-header.sass
@@ -39,6 +39,10 @@
             .box-nav-and-buttons
                 display: block
                 padding: 1em 0
+
+.bottom-header
+    .img-brand
+        max-height: 70px !important
         
 
 .sticky-header
@@ -52,4 +56,4 @@
     &.fixed-bottom-header
         top: 0
     .img-brand
-        max-height: 30px !important
+        max-height: 60px !important
