Ajustes url y card package

--- a/master-template-woo-child/assets/sass/_custom-slick-carousel.sass
+++ b/master-template-woo-child/assets/sass/_custom-slick-carousel.sass
@@ -22,3 +22,9 @@
             background-color: $dark
     .slick-dots
         bottom: -60px
+
+@media screen and (max-width: 480px)
+    .slick-custom-rgc
+        .slick-custom-arrow
+            top: 100%
+
