--- a/master-template-woo-child/assets/sass/_rgc-menu-responsive.sass
+++ b/master-template-woo-child/assets/sass/_rgc-menu-responsive.sass
@@ -1,10 +1,12 @@
 @media (max-width: 480px)
     .box-menu-nav-mobile
-        background-color: #e79217 !important
+        background-color: #151515 !important
         .box-logo
             text-align: center !important
             img
                 max-width: 100px !important
+        .menu-item
+            border-color: rgba(#fff, .2) !important
         .box-menu-nav
             .menu-menu-registrados-container
                 a
