--- a/master-template-woo-child/assets/sass/_rgc-package.sass
+++ b/master-template-woo-child/assets/sass/_rgc-package.sass
@@ -37,6 +37,12 @@
             color: $primary-color
             display: inline-block
             margin: .5em
+    &__date
+        &-start
+            font-weight: 600
+        &-limit
+            color: #BD0606
+            font-size: .8em
     &__price
         display: flex
         flex-flow: row wrap
@@ -123,3 +129,10 @@
         &__info
             .rgc-content-package__desc
                 display: none
+        &__image
+            height: 150px
+        hr
+            margin: .5em 0
+    .rgc-box-offer
+        width: 70px
+        height: 70px
