--- a/master-template-woo-child/assets/sass/_rgc-page-search.sass
+++ b/master-template-woo-child/assets/sass/_rgc-page-search.sass
@@ -1,32 +1,6 @@
-.rgc-card-archive
-    overflow: hidden
-    figure
-        margin: 0
-        position: relative
-    &__img
-        width: 100%
-        height: 200px
-        object-fit: cover
-    &__caption
-        position: absolute
-        top: 20px
-        left: 0
-        background-color: white
-        color: $secondary-color
-        padding: .5em 1em
-        border-top-right-radius: 5px
-        border-bottom-right-radius: 5px
-        &__city
-            color: $secondary-color
-            font-weight: 600
-    hr
-        border: 1px solid #DFDFDF
-        margin: 1em auto
-    &__title
-        &:hover
-            color: darken($primary-color, 8)
-            text-decoration: underline
-
 .rgc-search-not-found
     max-width: 200px !important
     margin-bottom: 2em
+.rgc-item-search
+    .rgc-content-package__desc
+        display: none !important
