--- a/master-template-woo-child/assets/sass/_rgc-search-bar.sass
+++ b/master-template-woo-child/assets/sass/_rgc-search-bar.sass
@@ -40,7 +40,7 @@
         &:hover
             background-color: darken($primary-color, 9)
 
-.page-template-paquetes-page, .single-tours, .search, .blog.logged-in
+.page-template-paquetes-page, .single-tours, .search, .blog.logged-in, .tax-destinos
     .rgc-search-bar
         display: inline-block !important
 
@@ -50,3 +50,12 @@
         padding: 2em 1em
         margin: 0
         margin-bottom: -10px
+        width: 100%
+        li
+            display: block !important
+            padding: 0px !important
+            select
+                width: 100%
+            .btn-filter-submit
+                width: 100%
+                margin-top: 1em
