--- a/master-template-woo-child/assets/sass/_single-tours.sass
+++ b/master-template-woo-child/assets/sass/_single-tours.sass
@@ -28,6 +28,8 @@
             color: $primary-color
             transition: all .3s
             display: inline-block
+            font-family: $secondary-font !important
+            font-weight: 600
             &:hover
                 color: $dark
     div:nth-child(even)
