--- a/master-template-woo-child/assets/css/custom-style.css
+++ b/master-template-woo-child/assets/css/custom-style.css
@@ -201,6 +201,13 @@ textarea.form-control {
   display: inline-block;
   margin: 0.5em;
 }
+.rgc-content-package__date-start {
+  font-weight: 600;
+}
+.rgc-content-package__date-limit {
+  color: #BD0606;
+  font-size: 0.8em;
+}
 .rgc-content-package__price {
   display: flex;
   flex-flow: row wrap;
@@ -303,6 +310,17 @@ textarea.form-control {
   .rgc-card-package__info .rgc-content-package__desc {
     display: none;
   }
+  .rgc-card-package__image {
+    height: 150px;
+  }
+  .rgc-card-package hr {
+    margin: 0.5em 0;
+  }
+
+  .rgc-box-offer {
+    width: 70px;
+    height: 70px;
+  }
 }
 .slick-custom-rgc .slick-custom-arrow {
   background-color: #E0831F;
@@ -333,6 +351,11 @@ textarea.form-control {
   bottom: -60px;
 }
 
+@media screen and (max-width: 480px) {
+  .slick-custom-rgc .slick-custom-arrow {
+    top: 100%;
+  }
+}
 .rgc-search-box {
   border-radius: 20px;
   margin-top: 2em;
@@ -398,6 +421,8 @@ textarea.form-control {
   color: #010077;
   transition: all 0.3s;
   display: inline-block;
+  font-family: "Nunito", sans-serif !important;
+  font-weight: 600;
 }
 .rgc-assesor__box a:hover {
   color: #2D2D2D;
@@ -534,7 +559,7 @@ textarea.form-control {
   background-color: #010049;
 }
 
-.page-template-paquetes-page .rgc-search-bar, .single-tours .rgc-search-bar, .search .rgc-search-bar, .blog.logged-in .rgc-search-bar {
+.page-template-paquetes-page .rgc-search-bar, .single-tours .rgc-search-bar, .search .rgc-search-bar, .blog.logged-in .rgc-search-bar, .tax-destinos .rgc-search-bar {
   display: inline-block !important;
 }
 
@@ -544,46 +569,27 @@ textarea.form-control {
     padding: 2em 1em;
     margin: 0;
     margin-bottom: -10px;
+    width: 100%;
+  }
+  .rgc-search-bar li {
+    display: block !important;
+    padding: 0px !important;
+  }
+  .rgc-search-bar li select {
+    width: 100%;
+  }
+  .rgc-search-bar li .btn-filter-submit {
+    width: 100%;
+    margin-top: 1em;
   }
 }
-.rgc-card-archive {
-  overflow: hidden;
-}
-.rgc-card-archive figure {
-  margin: 0;
-  position: relative;
-}
-.rgc-card-archive__img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-.rgc-card-archive__caption {
-  position: absolute;
-  top: 20px;
-  left: 0;
-  background-color: white;
-  color: #E0831F;
-  padding: 0.5em 1em;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-}
-.rgc-card-archive__caption__city {
-  color: #E0831F;
-  font-weight: 600;
-}
-.rgc-card-archive hr {
-  border: 1px solid #DFDFDF;
-  margin: 1em auto;
-}
-.rgc-card-archive__title:hover {
-  color: #01004e;
-  text-decoration: underline;
-}
-
 .rgc-search-not-found {
   max-width: 200px !important;
   margin-bottom: 2em;
+}
+
+.rgc-item-search .rgc-content-package__desc {
+  display: none !important;
 }
 
 .item-profile-user {
@@ -643,13 +649,16 @@ textarea.form-control {
 }
 @media (max-width: 480px) {
   .box-menu-nav-mobile {
-    background-color: #e79217 !important;
+    background-color: #151515 !important;
   }
   .box-menu-nav-mobile .box-logo {
     text-align: center !important;
   }
   .box-menu-nav-mobile .box-logo img {
     max-width: 100px !important;
+  }
+  .box-menu-nav-mobile .menu-item {
+    border-color: rgba(255, 255, 255, 0.2) !important;
   }
   .box-menu-nav-mobile .box-menu-nav .menu-menu-registrados-container a {
     color: white !important;
