--- a/master-template-woo-child/assets/sass/_general-styles.sass
+++ b/master-template-woo-child/assets/sass/_general-styles.sass
@@ -86,3 +86,15 @@ textarea.form-control
 .page-id-55
     .rgc-search-bar
         display: none !important
+
+.bottom-header
+    ul
+        align-items: center
+
+.sticky-header
+    z-index: 2 !important
+    -webkit-box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.4)
+    box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.4)
+    .menu-item-has-children
+        .sub-menu a
+            color: white !important
