--- a/master-template-woo-child/assets/sass/_single-tours.sass
+++ b/master-template-woo-child/assets/sass/_single-tours.sass
@@ -36,3 +36,10 @@
         border-left: 2px solid $primary-color
         border-right: 2px solid $primary-color
             
+.single-tours
+    .rgc-content-package__desc
+        max-height: 200px
+        overflow-y: scroll
+        margin-bottom: 2em
+        border-bottom: 1px solid #ccc
+        font-size: .9em
