--- a/master-template-woo-child/assets/sass/_rgc-footer.sass
+++ b/master-template-woo-child/assets/sass/_rgc-footer.sass
@@ -14,14 +14,15 @@
         text-decoration: underline
 .rgc-widget-dollar
     position: fixed
-    right: 0
-    bottom: 9em
+    left: 0
+    bottom: 2em
     background-color: $primary-color
     color: white
     display: flex
     flex-direction: column 
-    border-top-left-radius: 20px
-    border-bottom-left-radius: 20px
+    border-top-right-radius: 20px
+    border-bottom-right-radius: 20px
+    z-index: 2
     span, p
         color: white
         display: block
