--- a/master-template-woo-child/assets/sass/_rgc-search-bar.sass
+++ b/master-template-woo-child/assets/sass/_rgc-search-bar.sass
@@ -13,6 +13,10 @@
         padding-left: 0px
         li
             text-align: left !important
+    .clean-input
+        margin-left: -1.1em
+        color: #BD0606
+        cursor: pointer
     input, select
         border: 1px solid #BCBCBC !important
         height: 50px
